--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap-icons": "^1.2.1",
     "codemirror": "^5.58.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
