--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "nodemon ./bin/www"
   },
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "body-parser": "^1.19.0",
     "bootstrap-icons": "^1.2.1",
     "codemirror": "^5.58.3",
