--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "directory-tree": "^2.2.5",
     "express": "~4.16.1",
     "express-async-handler": "^1.1.4",
+    "formidable": "^1.2.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
