--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.2.1",
+    "chokidar": "^3.4.3",
     "codemirror": "^5.58.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "express": "~4.16.1",
     "express-async-handler": "^1.1.4",
     "formidable": "^1.2.2",
+    "fs-extra": "^9.0.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
