--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formidable": "^1.2.2",
     "fs-extra": "^9.0.1",
     "http-errors": "~1.6.3",
+    "is-text-path": "^2.0.0",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
     "pug": "2.0.0-beta11",
