begin updates to ui

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
     "pug": "2.0.0-beta11",
+    "serve-favicon": "^2.5.0",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
