Global variable for pen duration. Using custom yagna version in docker file. Using custom yajsapi and subnet. Increased sleep for yagna startup.

--- a/pens/Docker/Dockerfile
+++ b/pens/Docker/Dockerfile
@@ -3,14 +3,19 @@ VOLUME /golem/work /golem/output /golem/resource
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update
 RUN apt-get -qq -y install curl
+RUN apt install -y wget
 RUN curl -sL https://deb.nodesource.com/setup_15.x | bash -
 RUN apt-get update
 RUN apt-get -qq -y install nodejs
 RUN npm i -g yarn
-RUN mkdir -p $HOME/.local/share/ya-installer/terms
-RUN touch $HOME/.local/share/ya-installer/terms/testnet-01.tag
-RUN curl -sSf https://join.golem.network/as-requestor | bash - || echo "Nothing to see here"
-ENV PATH=${PATH}:/root/.local/bin/:/root/.local/
+#commenting these out since we're going to manually install a specific version now
+# RUN mkdir -p $HOME/.local/share/ya-installer/terms
+# RUN touch $HOME/.local/share/ya-installer/terms/testnet-01.tag
+# RUN curl -sSf https://join.golem.network/as-requestor | bash - || echo "Nothing to see here"
+# ENV PATH=${PATH}:/root/.local/bin/:/root/.local/
+RUN wget https://github.com/golemfactory/yagna/releases/download/pre-rel-v0.6.1-rc3/golem-requestor-linux-pre-rel-v0.6.1-rc3.tar.gz
+RUN tar -xf golem-requestor-linux-pre-rel-v0.6.1-rc3.tar.gz
+RUN cp golem-requestor-linux-pre-rel-v0.6.1-rc3/* /usr/sbin/
 WORKDIR /golem/work
 # Start up in background and keep running
 # docker run -d -it --name=diska --rm -v ${PWD}:/golem/work golem-slate tail -f /dev/null
